--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ flexibility(document.documentElement);
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-5128b3b e-transform elementor-widget elementor-widget-image" data-id="5128b3b" data-element_type="widget" data-settings="{&quot;_transform_scale_effect_hover&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1.1,&quot;sizes&quot;:[]},&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_transform_scale_effect_hover_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_scale_effect_hover_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-														<a href="https://t.me/CROCerc" target="_blank" rel="nofollow">
+														<a href="https://t.me/croccatbase" target="_blank" rel="nofollow">
 							<img decoding="async" width="134" height="133" src="./tele_button.png" class="attachment-full size-full wp-image-75" alt="">								</a>
 													</div>
 				</div>
@@ -182,7 +182,7 @@ flexibility(document.documentElement);
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-993c0ec e-transform elementor-widget elementor-widget-image" data-id="993c0ec" data-element_type="widget" data-settings="{&quot;_transform_scale_effect_hover&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1.1,&quot;sizes&quot;:[]},&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_transform_scale_effect_hover_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_scale_effect_hover_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-														<a href="https://x.com/CROCerc" target="_blank" rel="nofollow">
+														<a href="https://x.com/croccatbase" target="_blank" rel="nofollow">
 							<img decoding="async" width="134" height="133" src="./twitterx_button.png" class="attachment-full size-full wp-image-76" alt="">								</a>
 													</div>
 				</div>
@@ -192,7 +192,7 @@ flexibility(document.documentElement);
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-f9c2155 e-transform elementor-widget elementor-widget-image" data-id="f9c2155" data-element_type="widget" data-settings="{&quot;_transform_scale_effect_hover&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1.1,&quot;sizes&quot;:[]},&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_transform_scale_effect_hover_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_scale_effect_hover_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-														<a href="https://www.dextools.io/app/en/ether/pair-explorer/0xd6d5bd92d7941922bc7255a2fe61bd21fdbbbc84?t=1727026243012" target="_blank" rel="nofollow">
+														<a href="https://www.dextools.io/" target="_blank" rel="nofollow">
 							<img loading="lazy" decoding="async" width="133" height="133" src="./dextools_button.png" class="attachment-full size-full wp-image-73" alt="">								</a>
 													</div>
 				</div>
@@ -372,7 +372,7 @@ flexibility(document.documentElement);
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-ae08f66 e-transform elementor-widget elementor-widget-image" data-id="ae08f66" data-element_type="widget" data-settings="{&quot;_transform_scale_effect_hover&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1.1,&quot;sizes&quot;:[]},&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_transform_scale_effect_hover_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_scale_effect_hover_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-														<a href="https://t.me/CROCerc" target="_blank" rel="nofollow">
+														<a href="https://t.me/croccatbase" target="_blank" rel="nofollow">
 							<img decoding="async" width="134" height="133" src="./tele_button.png" class="attachment-full size-full wp-image-75" alt="">								</a>
 													</div>
 				</div>
@@ -382,7 +382,7 @@ flexibility(document.documentElement);
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-5af7e38 e-transform elementor-widget elementor-widget-image" data-id="5af7e38" data-element_type="widget" data-settings="{&quot;_transform_scale_effect_hover&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1.1,&quot;sizes&quot;:[]},&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_transform_scale_effect_hover_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_scale_effect_hover_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-														<a href="https://x.com/CROCerc" target="_blank" rel="nofollow">
+														<a href="https://x.com/croccatbase" target="_blank" rel="nofollow">
 							<img decoding="async" width="134" height="133" src="./twitterx_button.png" class="attachment-full size-full wp-image-76" alt="">								</a>
 													</div>
 				</div>
@@ -392,7 +392,7 @@ flexibility(document.documentElement);
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-ab649b5 e-transform elementor-widget elementor-widget-image" data-id="ab649b5" data-element_type="widget" data-settings="{&quot;_transform_scale_effect_hover&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1.1,&quot;sizes&quot;:[]},&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_transform_scale_effect_hover_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_scale_effect_hover_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-														<a href="https://www.dextools.io/app/en/ether/pair-explorer/0xd6d5bd92d7941922bc7255a2fe61bd21fdbbbc84?t=1727026243012" target="_blank" rel="nofollow">
+														<a href="https://www.dextools.io/" target="_blank" rel="nofollow">
 							<img loading="lazy" decoding="async" width="133" height="133" src="./dextools_button.png" class="attachment-full size-full wp-image-73" alt="">								</a>
 													</div>
 				</div>
