--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ flexibility(document.documentElement);
 				</div>
 				<div class="elementor-element elementor-element-7469729 e-transform elementor-widget elementor-widget-image" data-id="7469729" data-element_type="widget" data-settings="{&quot;_transform_scale_effect_hover&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1.1,&quot;sizes&quot;:[]},&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_transform_scale_effect_hover_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_scale_effect_hover_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-													<img loading="lazy" decoding="async" width="942" height="721" src="./LOGO.png" class="attachment-full size-full wp-image-97" alt="" srcset="./LOGO.png 942w, ./LOGO.png 300w, ./LOGO.png 768w" sizes="(max-width: 942px) 100vw, 942px">													</div>
+													<img loading="lazy" decoding="async" width="942" height="721" src="./LOGO.gif" class="attachment-full size-full wp-image-97" alt="" srcset="./LOGO.gif 942w, ./LOGO.gif 300w, ./LOGO.gif 768w" sizes="(max-width: 942px) 100vw, 942px">													</div>
 				</div>
 				<div class="elementor-element elementor-element-8547c86 e-transform elementor-widget elementor-widget-image" data-id="8547c86" data-element_type="widget" data-settings="{&quot;_transform_scale_effect_hover&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1.1,&quot;sizes&quot;:[]},&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_transform_scale_effect_hover_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_scale_effect_hover_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -467,8 +467,8 @@ flexibility(document.documentElement);
 			</script>
 			<link rel="stylesheet" id="elementskit-reset-button-for-pro-form-css-css" href="./elementskit-reset-button.css" media="all">
 <link rel="stylesheet" id="ekit-particles-css" href="./particles.css" media="all">
-<link rel="icon" href="./LOGO.png" sizes="32x32">
-<link rel="icon" href="./LOGO.png" sizes="192x192">
+<link rel="icon" href="./LOGO.gif" sizes="32x32">
+<link rel="icon" href="./LOGO.gif" sizes="192x192">
 <script id="astra-theme-js-js-extra">
 var astra = {"break_point":"921","isRtl":"","is_scroll_to_id":"1","is_scroll_to_top":"1","is_header_footer_builder_active":"1"};
 </script>
