--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@ flexibility(document.documentElement);
 				<div class="elementor-widget-container">
 													<img loading="lazy" decoding="async" width="942" height="721" src="./LOGO.gif" class="attachment-full size-full wp-image-97" alt="" srcset="./LOGO.gif 942w, ./LOGO.gif 300w, ./LOGO.gif 768w" sizes="(max-width: 942px) 100vw, 942px">													</div>
 				</div>
+					<style>#dexscreener-embed{position:relative;width:100%;padding-bottom:125%;}@media(min-width:1400px){#dexscreener-embed{padding-bottom:65%;}}#dexscreener-embed iframe{position:absolute;width:100%;height:100%;top:0;left:0;border:0;}</style><div id="dexscreener-embed"><iframe src="https://dexscreener.com/base/0x2A6f72003941D59E86BC4A604BF4a9B6f7d8F293?embed=1&loadChartSettings=0&info=0&chartDefaultOnMobile=1&chartTheme=light&theme=light&chartStyle=2&chartType=usd&interval=1"></iframe></div>
+
 				<div class="elementor-element elementor-element-8547c86 e-transform elementor-widget elementor-widget-image" data-id="8547c86" data-element_type="widget" data-settings="{&quot;_transform_scale_effect_hover&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:1.1,&quot;sizes&quot;:[]},&quot;ekit_we_effect_on&quot;:&quot;none&quot;,&quot;_transform_scale_effect_hover_tablet&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]},&quot;_transform_scale_effect_hover_mobile&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:[]}}" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 														<a href="https://app.uniswap.org/swap?outputCurrency=0xBBAF79C3922E1089d66532c7e3156F8Bc5e25083&amp;chain=ethereum" target="_blank" rel="nofollow">
